--- a/prj/DarkStore.Api/DarkStore.Api.csproj
+++ b/prj/DarkStore.Api/DarkStore.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -11,5 +11,10 @@
         <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
+
+	<ItemGroup>
+		<InternalsVisibleTo Include="DarkStore.Api.Tests.Unit" />
+	</ItemGroup>
+
 
 </Project>
